--- a/hotel_backend/src/main/resources/application.properties
+++ b/hotel_backend/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8080
 # ===============================
 # Format: jdbc:postgresql://localhost:5432/YOUR_DATABASE_NAME
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_db
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
