--- a/hotel_backend/pom.xml
+++ b/hotel_backend/pom.xml
@@ -4,11 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.hotel</groupId>
-        <artifactId>hotel_app</artifactId>  <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+<parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.3</version>
+        <relativePath/> </parent>
+
+    <groupId>com.hotel</groupId>
 
     <artifactId>hotel_backend</artifactId>
 
