--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,5 +37,21 @@ services:
     depends_on:
       - hotel-backend
 
+caddy:
+    image: caddy:latest
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - frontend
+      - backend
+
 volumes:
   db_data:
+  caddy_data: 
+  caddy_config:
